--- a/src/app/pages/dashboard/components/widget-storage/widget-storage.component.scss
+++ b/src/app/pages/dashboard/components/widget-storage/widget-storage.component.scss
@@ -116,7 +116,7 @@ mat-grid-tile {
 
       .mat-icon {
         font-size: 16px;
-        height: 14px;
+        height: 16px;
         width: 14px;
 
         &.mdi-set {
